--- a/templates/investigation.html
+++ b/templates/investigation.html
@@ -810,6 +810,90 @@
             </div>
         </div>
 
+        <!-- Manpower -->
+        <div class="section">
+            <div class="section-title">Manpower</div>
+
+            <label>Compensation :</label>
+            <input type="text">
+            <label>Medical and Hospitalization :</label>
+            <input type="text">
+            <label>Burial :</label>
+            <input type="text">   
+
+            <label>Time Lost on Day of Injury :</label>
+            <div class="row">
+                <div>
+                    <label>Hrs.</label>
+                    <input type="text">
+                </div>
+                <div>
+                    <label>Mins.</label>
+                    <input type="text">
+                </div>
+            </div>
+
+            <label>Time Lost on Subsequent Days  (treatment or other reasons) :</label>
+            <div class="row">
+                <div>
+                    <label>Hrs.</label>
+                    <input type="text">
+                </div>
+                <div>
+                    <label>Mins.</label>
+                    <input type="text">
+                </div>
+            </div>
+
+            <div class="row">
+                <div>
+                    <label>Time on light work or reduced output : </label>
+                    <input type="text">
+                </div>
+                <div>
+                    <label>Days :</label>
+                    <input type="text">
+                </div>
+            </div>
+        </div>
+
+        <!-- Machinery and Tools Materials -->
+        <div class="section">
+            <div class="section-title">Machinery and Tools Materials</div>
+
+            <label>Damage to Machinery and Tools (Describe) :</label>
+            <textarea></textarea>
+            <label>Cost of repair or replacement :</label>
+            <input type="text">
+            
+            <div class="row">
+                <div>
+                    <label>Lost Production Time :</label>
+                    <input type="text">
+                </div>
+                <div>
+                    <label>Cost :</label>
+                    <input type="text">
+                </div>
+            </div>
+
+            <label>Damage to Materials (Describe):</label>
+            <textarea></textarea>
+            <label>Cost of repair or replacement :</label>
+            <input type="text">
+            
+            <div class="row">
+                <div>
+                    <label>Lost Production Time :</label>
+                    <input type="text">
+                </div>
+                <div>
+                    <label>Cost :</label>
+                    <input type="text">
+                </div>
+            </div>
+        </div>
+
 
         <!-- SUBMIT -->
         <div class="actions">
