--- a/templates/investigation.html
+++ b/templates/investigation.html
@@ -894,6 +894,44 @@
             </div>
         </div>
 
+        <!-- EQUIPMENTs -->
+        <div class="section">
+            <div class="section-title">EQUIPMENT</div>
+
+            <label>Damage to Equipment (Describe) :</label>
+            <textarea></textarea>
+            <label>Cost of repair or replacement :</label>
+            <input type="text">
+            
+            <div class="row">
+                <div>
+                    <label>Lost Production Time :</label>
+                    <input type="text">
+                </div>
+                <div>
+                    <label>Cost :</label>
+                    <input type="text">
+                </div>
+            </div>
+        </div>
+
+        <div class="signature">
+
+            <input type="date">
+            <label>Date</label>
+
+            <div class="rowss">
+                <div>
+                    <input type="text">
+                    <label>OH Personnel / Safety Officer</label>
+                </div>
+                <div>
+                    <input type="text">
+                    <label>Employer/Representative</label>
+                </div>
+            </div>
+
+        </div>
 
         <!-- SUBMIT -->
         <div class="actions">
