--- a/static/investigation.css
+++ b/static/investigation.css
@@ -174,6 +174,39 @@ textarea {
     flex: 1;
 }
 
+.signature {
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.signature input {
+    flex: 1;
+    width: 250px;
+    margin-left: 20px;
+}
+
+.signature label {
+    margin-top: 10px;
+    margin-bottom: -10px;
+    margin-left: 125px;
+}
+
+.rowss {
+    display: flex;
+    gap: 500px;
+    margin-top: 30px;
+}
+
+.rowss input {
+    width: 350px;
+    margin-top: -50px;
+    margin-right: -80px;
+}
+
+.rowss label {
+    margin-left: 70px;
+}
+
 
 /* ACTIONS */
 .actions {
